// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput component should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Upload
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value=""
          />
          <p
            class="el-has-grey-text el-has-no-margin el-small-text"
          >
            Upload File
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Upload
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value=""
        />
        <p
          class="el-has-grey-text el-has-no-margin el-small-text"
        >
          Upload File
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FileInput component should match a snapshot with full props 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-file-input-wrap"
      >
        <label
          class="el-label"
        >
          Some Label
        </label>
        <div
          class="el-flex-align-center el-flex-container"
        >
          <button
            class="el-mr4 el-intent-low el-button"
            type="button"
          >
            Change
          </button>
          <input
            class="el-file-input"
            data-testid="el-file-input"
            type="file"
          />
          <input
            class="el-file-input-hidden"
            id="test-static-id"
            value="https://mock.com"
          />
          <div
            class="el-file-input-icon-container"
          >
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.99991 12.4622C11.36 12.4622 12.4627 11.3596 12.4627 9.99949C12.4627 8.63935 11.36 7.53674 9.99991 7.53674C8.63978 7.53674 7.53717 8.63935 7.53717 9.99949C7.53717 11.3596 8.63978 12.4622 9.99991 12.4622Z"
                  fill="currentColor"
                />
                <path
                  d="M19.876 9.68749C19.6956 9.49665 15.4049 4.99854 9.99872 4.99854C4.59315 4.99854 0.303011 9.49665 0.123115 9.68749C-0.0409569 9.86275 -0.0409569 10.136 0.123115 10.3105C0.303725 10.5013 4.59399 15.0015 9.99872 15.0015C15.4049 15.0015 19.6969 10.5013 19.876 10.3105C20.0413 10.136 20.0413 9.86132 19.876 9.68749ZM9.99991 13.8067C7.90124 13.8067 6.19389 12.099 6.19389 9.99863C6.19389 7.89996 7.90124 6.1913 9.99991 6.1913C12.0985 6.1913 13.8082 7.89936 13.8082 9.99863C13.8077 12.0978 12.0985 13.8067 9.99991 13.8067ZM6.98189 6.40451C5.95332 7.27008 5.28418 8.55137 5.28418 9.99863C5.28418 11.4453 5.95332 12.7267 6.98189 13.5938C4.13592 12.6785 1.90102 10.7526 1.10219 9.99863C1.90114 9.24549 4.13651 7.31934 6.98189 6.40451ZM13.0194 13.5924C14.0472 12.7262 14.7172 11.4446 14.7172 9.99863C14.7172 8.55267 14.0478 7.27198 13.0185 6.40582C15.8644 7.32112 18.0976 9.24466 18.8969 9.99863C18.0975 10.7519 15.8643 12.6758 13.0194 13.5924Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="el-mr4 el-intent-primary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 20 20"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 9.99995C0 4.48591 4.48601 0 9.99995 0C15.514 0 19.9999 4.48591 19.9999 9.99995C19.9999 15.514 15.5139 20 9.99995 20C4.48601 20 0 15.514 0 9.99995ZM14.5467 14.5764C13.9855 15.1412 13.0756 15.1412 12.5144 14.5764L9.99068 12.0361L7.4438 14.5528C6.87745 15.1125 5.9676 15.104 5.41159 14.534C4.85558 13.964 4.86396 13.0482 5.4303 12.4886L7.9583 9.99053L5.45326 7.46918C4.89206 6.90432 4.89206 5.9885 5.45326 5.42364C6.01446 4.85879 6.92435 4.85879 7.48555 5.42364L10.0093 7.96384L12.5562 5.44713C13.1225 4.88749 14.0324 4.89593 14.5884 5.46596C15.1444 6.036 15.136 6.95177 14.5697 7.51141L12.0417 10.0095L14.5467 12.5308C15.1079 13.0957 15.1079 14.0115 14.5467 14.5764Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-file-input-wrap"
    >
      <label
        class="el-label"
      >
        Some Label
      </label>
      <div
        class="el-flex-align-center el-flex-container"
      >
        <button
          class="el-mr4 el-intent-low el-button"
          type="button"
        >
          Change
        </button>
        <input
          class="el-file-input"
          data-testid="el-file-input"
          type="file"
        />
        <input
          class="el-file-input-hidden"
          id="test-static-id"
          value="https://mock.com"
        />
        <div
          class="el-file-input-icon-container"
        >
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.99991 12.4622C11.36 12.4622 12.4627 11.3596 12.4627 9.99949C12.4627 8.63935 11.36 7.53674 9.99991 7.53674C8.63978 7.53674 7.53717 8.63935 7.53717 9.99949C7.53717 11.3596 8.63978 12.4622 9.99991 12.4622Z"
                fill="currentColor"
              />
              <path
                d="M19.876 9.68749C19.6956 9.49665 15.4049 4.99854 9.99872 4.99854C4.59315 4.99854 0.303011 9.49665 0.123115 9.68749C-0.0409569 9.86275 -0.0409569 10.136 0.123115 10.3105C0.303725 10.5013 4.59399 15.0015 9.99872 15.0015C15.4049 15.0015 19.6969 10.5013 19.876 10.3105C20.0413 10.136 20.0413 9.86132 19.876 9.68749ZM9.99991 13.8067C7.90124 13.8067 6.19389 12.099 6.19389 9.99863C6.19389 7.89996 7.90124 6.1913 9.99991 6.1913C12.0985 6.1913 13.8082 7.89936 13.8082 9.99863C13.8077 12.0978 12.0985 13.8067 9.99991 13.8067ZM6.98189 6.40451C5.95332 7.27008 5.28418 8.55137 5.28418 9.99863C5.28418 11.4453 5.95332 12.7267 6.98189 13.5938C4.13592 12.6785 1.90102 10.7526 1.10219 9.99863C1.90114 9.24549 4.13651 7.31934 6.98189 6.40451ZM13.0194 13.5924C14.0472 12.7262 14.7172 11.4446 14.7172 9.99863C14.7172 8.55267 14.0478 7.27198 13.0185 6.40582C15.8644 7.32112 18.0976 9.24466 18.8969 9.99863C18.0975 10.7519 15.8643 12.6758 13.0194 13.5924Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span
            class="el-mr4 el-intent-primary el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0 9.99995C0 4.48591 4.48601 0 9.99995 0C15.514 0 19.9999 4.48591 19.9999 9.99995C19.9999 15.514 15.5139 20 9.99995 20C4.48601 20 0 15.514 0 9.99995ZM14.5467 14.5764C13.9855 15.1412 13.0756 15.1412 12.5144 14.5764L9.99068 12.0361L7.4438 14.5528C6.87745 15.1125 5.9676 15.104 5.41159 14.534C4.85558 13.964 4.86396 13.0482 5.4303 12.4886L7.9583 9.99053L5.45326 7.46918C4.89206 6.90432 4.89206 5.9885 5.45326 5.42364C6.01446 4.85879 6.92435 4.85879 7.48555 5.42364L10.0093 7.96384L12.5562 5.44713C13.1225 4.88749 14.0324 4.89593 14.5884 5.46596C15.1444 6.036 15.136 6.95177 14.5697 7.51141L12.0417 10.0095L14.5467 12.5308C15.1079 13.0957 15.1079 14.0115 14.5467 14.5764Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
